--- a/portfolio.html
+++ b/portfolio.html
@@ -65,7 +65,7 @@
             <small></small>
 
             <h1 class="text text-white">Reactjs Developer </h1>
-            <p class="para text-white">Iam React js I love to create website and I have done many project in react js </p>
+            <p class="para text-white">Iam React js developer I love to create website and I have done many project in react js </p>
 
             <button type="button" class="btn btn-dark">Learn More</button>
 
@@ -180,9 +180,9 @@
                 <div class="contact-block col-lg-4 text-center">
 
                     <h1 class="link text-white">Quick Link</h1><br>
-                    <a href="" class="text-white">Home</a><br>
-                    <a href="" class="text-white">About</a><br>
-                    <a href="" class="text-white">Contact</a>
+                    <a href="#Home" class="text-white">Home</a><br>
+                    <a href="#about" class="text-white">About</a><br>
+                    <a href="#contact" class="text-white">Contact</a>
 
                 </div>
 
